force-app/main/default/objects/Dynamic_Group_Rule__c/Dynamic_Group_Rule__c.object-meta.xml
<CustomObject>
    <description>Records that control the adding and removal of users into groups based on permission set</description>
    <label>Dynamic Group Rule</label>
    <nameField>
        <displayFormat>DGR-{00000000}</displayFormat>
        <label>Dynamic Group Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dynamic Group Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>