force-app/main/default/objects/Dynamic_Group_Rule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this rule Active?</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>