force-app/main/default/objects/Dynamic_Group_Rule__c/fields/Group_Id__c.field-meta.xml
<CustomField>
	<fullName>Group_Id__c</fullName>
	<description>Id of the public group</description>
	<label>Group Id</label>
	<length>18</length>
	<type>Text</type>
</CustomField>