force-app/main/default/objects/Dynamic_Group_Rule__c/fields/Group_Name__c.field-meta.xml
<CustomField>
	<fullName>Group_Name__c</fullName>
	<description>Title of the group</description>
	<label>Group Name</label>
	<length>255</length>
	<type>Text</type>
</CustomField>