force-app/main/default/objects/Dynamic_Group_Rule__c/fields/Permission_Set_ID__c.field-meta.xml
<CustomField>
	<fullName>Permission_Set_ID__c</fullName>
	<description>Permission set ID that controls this group</description>
	<label>Permission Set ID</label>
	<length>18</length>
	<type>Text</type>
</CustomField>