force-app/main/default/objects/Dynamic_Group_Rule__c/fields/Permission_Set_Name__c.field-meta.xml
<CustomField>
	<fullName>Permission_Set_Name__c</fullName>
	<description>Permission Set Label</description>
	<label>Permission Set Name</label>
	<length>255</length>
	<type>Text</type>
</CustomField>