force-app/main/default/objects/Dynamic_Group_Rule__c/fields/Profile_Id__c.field-meta.xml
<CustomField>
	<fullName>Profile_Id__c</fullName>
	<label>Profile Id</label>
	<length>18</length>
	<type>Text</type>
</CustomField>