force-app/main/default/objects/Dynamic_Group_Rule__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
	<fullName>Profile_Name__c</fullName>
	<label>Profile Name</label>
	<length>255</length>
	<type>Text</type>
</CustomField>