force-app/main/default/objects/Dynamic_Group_Rule__c/fields/Remove_on_no_Link__c.field-meta.xml
<CustomField>
	<fullName>Remove_on_no_Link__c</fullName>
	<defaultValue>true</defaultValue>
	<description>Removes user from group who do not have this Permission Set or Profile</description>
	<label>Remove on no Link</label>
	<type>Checkbox</type>
</CustomField>