force-app/main/default/objects/Dynamic_Group_Rule__c/recordTypes/Permission_Set_Based.recordType-meta.xml
<RecordType>
	<fullName>Permission_Set_Based</fullName>
	<active>true</active>
	<label>Permission Set Based</label>
</RecordType>