force-app/main/default/objects/Dynamic_Group_Rule__c/recordTypes/Profile_Based.recordType-meta.xml
<RecordType>
	<fullName>Profile_Based</fullName>
	<active>true</active>
	<label>Profile Based</label>
</RecordType>