force-app/main/default/objects/Dynamic_Group_Rule__c/validationRules/DGR_Must_Have_Group.validationRule-meta.xml
<ValidationRule>
	<fullName>DGR_Must_Have_Group</fullName>
	<active>true</active>
	<description>For an active rule you must have a group Id</description>
	<errorConditionFormula>IF(
AND(
   Active__c == True
   , ISBLANK(Group_ID__c)
)
, true
, false
)</errorConditionFormula>
	<errorDisplayField>Group_ID__c</errorDisplayField>
	<errorMessage>Active rules must have a Group defined</errorMessage>
</ValidationRule>