force-app/main/default/objects/Dynamic_Group_Rule__c/validationRules/DGR_Must_Have_Profile.validationRule-meta.xml
<ValidationRule>
	<fullName>DGR_Must_Have_Profile</fullName>
	<active>true</active>
	<description>For an active Profile Based rule you must have a Profile ID</description>
	<errorConditionFormula>IF(
AND(
   Active__c == True
   , RecordType.Name == &apos;Profile Based&apos;
   , ISBLANK(Profile_Id__c )
)
, true
, false
)</errorConditionFormula>
	<errorDisplayField>Profile_Id__c</errorDisplayField>
	<errorMessage>`Active Profile Based rules must have a Profile defined</errorMessage>
</ValidationRule>