force-app/main/default/objects/Dynamic_Group_Rule__c/validationRules/DGR_Must_Have_PS.validationRule-meta.xml
<ValidationRule>
	<fullName>DGR_Must_Have_PS</fullName>
	<active>true</active>
	<description>For an active Permission Set Based rule you must have a Permissions set ID</description>
	<errorConditionFormula>IF(
AND(
   Active__c == True
   ,  RecordType.Name == &apos;Permission Set Based&apos;
   , ISBLANK(Permission_Set_ID__c )
)
, true
, false
)</errorConditionFormula>
	<errorDisplayField>Permission_Set_ID__c</errorDisplayField>
	<errorMessage>Active Permission Set Based rules must have a Permission Set defined</errorMessage>
</ValidationRule>