force-app/main/default/objects/Dynamic_Group_Rule__c/listViews/All.listView-meta.xml
<ListView>
	<fullName>All</fullName>
	<columns>NAME</columns>
	<columns>RECORDTYPE</columns>
	<columns>Group_Name__c</columns>
	<columns>Permission_Set_Name__c</columns>
	<columns>Profile_Name__c</columns>
	<columns>Active__c</columns>
	<columns>Remove_on_no_Link__c</columns>
	<filterScope>Everything</filterScope>
	<label>All</label>
</ListView>